added blog page and about page and error page and changed icons

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -37,8 +37,8 @@
                   <li><a href="index-full-slider.html">- صفحه جایگزین</a></li>
                 </ul>
               </li>
-              <li><a href="about.html">درباره ما</a></li>
-              <li class="menu-item-has-children"><a href="#">پروفایل من</a>
+              <li><a [routerLink]="['/about']">درباره ما</a></li>
+              <li class="menu-item-has-children"><a [routerLink]="['/blog']">پروفایل من</a>
                 <ul class="sub-menu">
                   <li><a href="portfolio-2column.html">-صفحه اول</a></li>
                   <li><a href="portfolio-3column.html">-صفحه دوم</a></li>
