--- a/src/app/modules/contact/contact.component.html
+++ b/src/app/modules/contact/contact.component.html
@@ -1,7 +1,7 @@
 
 
 <div class="container">
-  <div class="contact-map" id="map"></div>
+  <div class="contact-map" style="background-image:url(../../../assets/img/about-header.jpg)"></div>
   <div class="col-md-6 col-md-offset-6 col-sm-6 col-sm-offset-6 hidden-xs">
     <div class="row">
       <div class="inner-map">
@@ -23,7 +23,7 @@
       <div class="col-md-3 float-right">
         <div class="contact-info">
           <span class="icon-info">
-            <i class="pe-7s-phone"></i>
+            <i class="fa fa-phone"></i>
           </span>
           <span class="title-info">با ما تماس بگیرید:</span>
           <span class="description-info">9999 999 0999</span>
@@ -31,7 +31,7 @@
 
         <div class="contact-info">
           <span class="icon-info">
-            <i class="pe-7s-map-marker"></i>
+            <i class="fa fa-map-marker"></i>
           </span>
           <span class="title-info">آدرس:</span>
           <span class="description-info">تبریز شرکت نرم افزار وکسوس</span>
@@ -39,7 +39,7 @@
 
         <div class="contact-info">
           <span class="icon-info">
-            <i class="pe-7s-mail"></i>
+            <i class="fa fa-inbox"></i>
           </span>
           <span class="title-info">ایمیل:</span>
           <span class="description-info">vexus&#64;gmail.com</span>
